[tool.poetry]
name = "redtrio"
version = "0.6.1"
description = "An async (Trio) client for Redis 6+"
authors = ["Harrison Morgan <harrison.morgan@gmail.com>"]
license = "bsd-3-clause"

readme = "README.md"
repository = "https://github.com/Harrison88/redtrio"
documentation = "https://redtrio.readthedocs.io/en/latest/"

keywords = ["async", "trio", "redis", "resp3"]

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: Trio",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.8"
]


[tool.poetry.dependencies]
python = "^3.8"
trio = "~=0.16"
respy3 = "^0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
mypy = "^0.780"
pytest = "^5.4.3"
pytest-trio = "^0.6.0"
coverage = {extras = ["toml"], version = "^5.1"}
pytest-cov = "^2.10.0"
rope = "^0.17.0"
sphinx = "^3.1.1"
flake8 = "^3.8.3"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.0"
flake8-bugbear = "^20.1.4"
flake8-import-order = "^0.18.1"
safety = "^1.9.0"
flake8-docstrings = "^1.5.0"
darglint = "^1.4.1"
sphinx-autodoc-typehints = "^1.11.0"
sphinx-autoapi = "^1.4.0"
codecov = "^2.1.7"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["redtrio"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
