[tool.poetry]
name = "redtrio"
version = "0.6.3"
description = "An async (Trio) client for Redis 6+"
authors = ["Harrison Morgan <harrison.morgan@gmail.com>"]
license = "bsd-3-clause"

readme = "README.md"
repository = "https://github.com/Harrison88/redtrio"
documentation = "https://redtrio.readthedocs.io/en/latest/"

keywords = ["async", "trio", "redis", "resp3"]

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: Trio",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.10"
]


[tool.poetry.dependencies]
python = "^3.8"
trio = "~=0.16"
respy3 = "^0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7"
pytest-trio = "^0.7.0"
pytest-cov = "^3"
coverage = {extras = ["toml"], version = "^6"}
codecov = "^2"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
black = "^22"
flake8 = "^4"
flake8-bandit = "^3"
flake8-black = "^0"
flake8-bugbear = "^22"
flake8-import-order = "^0"
flake8-docstrings = "^1"
darglint = "^1"

[tool.poetry.group.types]
optional = true

[tool.poetry.group.types.dependencies]
mypy = "^0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^5"
sphinx-autodoc-typehints = "^1"
sphinx-autoapi = "^1"

[tool.poetry.group.safety]
optional = true

[tool.poetry.group.safety.dependencies]
safety = "^1"

[tool.poetry.dev-dependencies]
rope = "^1"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["redtrio"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
